--- a/static/design.css
+++ b/static/design.css
@@ -56,7 +56,7 @@ header {
     padding-top: 1em;;
 }
 
-ul {
+ul.menuNav {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -64,12 +64,12 @@ ul {
     font-weight: bold;
   }
 
-a {
+.link {
     text-decoration: none;
     color:white;
 }
 
-.bouton {
+#bouton {
     display:inline-block;
     width:250px;
     height:50px;
@@ -79,4 +79,15 @@ a {
     border-radius :25px;
     background :#4bb3ef;
     background-image : linear-gradient(to bottom, #8fcef3 0%, #2b6cd5 100%);
+}
+
+#bouton:hover {
+    background: #aad0e6;
+    transition: background-color 0.3s ease; 
+}
+
+.active {
+    background-color: #aad0e6;
+    color:#2b6cd5;
+    /* transition: background-color 1s ease; */
 }
