--- a/templates/tables_template.html
+++ b/templates/tables_template.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li class = "bouton"><a href="/">Accueil</a></li>
-                <li class = "bouton"><a href="/table/customer">Client</a></li>
-                <li class = "bouton"><a href="/table/product">Produit</a></li>
-                <li class = "bouton"><a href="/table/customer_order">Commandes des clients</a></li>
-                <li class = "bouton"><a href="/table/order_detail">Détail des commandes</a></li>
-                <li><a href="/table/all">Tous</a></li>
-                <li><a href="/tablePib">Tableau du PIB </a></li>
+            <ul class="menuNav">
+                <li id = "bouton"><a class="link" href="/">Accueil</a></li>
+                <li id = "bouton" class="{% if name == 'customer' %}active{% endif %}"><a class="link"  href="/table/customer">Client</a></li>
+                <li id = "bouton" class="{% if name == 'product' %}active{% endif %}"><a class="link" href="/table/product">Produit</a></li>
+                <li id = "bouton" class="{% if name == 'customer_order' %}active{% endif %}" ><a class="link" href="/table/customer_order">Commandes des clients</a></li>
+                <li id = "bouton"><a class="link" href="/table/order_detail">Détail des commandes</a></li>
+                <li id = "bouton" class="{% if name == 'all' %}active{% endif %}" ><a class="link" href="/table/all">Tous</a></li>
+                <li id = "bouton" class="{% if name == 'pib' %}active{% endif %}" ><a class="link" href="/tablePib">Tableau du PIB </a></li>
             </ul>
         </nav>
     </header>
