--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -20,6 +20,7 @@
             <li><a href="/table/customer_order">Commandes des clients</a></li>
             <li><a href="/table/order_detail">Détail des commandes</a></li>
             <li><a href="/table/all">Tous</a></li>
+            <li><a href="/table/country_pib">Tableau du PIB</a></li>
         </ul>
     </div>
     
