--- a/templates/tables_template.html
+++ b/templates/tables_template.html
@@ -17,7 +17,7 @@
                 <li id = "bouton" class="{% if name == 'customer_order' %}active{% endif %}" ><a class="link" href="/table/customer_order">Commandes des clients</a></li>
                 <li id = "bouton"><a class="link" href="/table/order_detail">Détail des commandes</a></li>
                 <li id = "bouton" class="{% if name == 'all' %}active{% endif %}" ><a class="link" href="/table/all">Tous</a></li>
-                <li id = "bouton" class="{% if name == 'pib' %}active{% endif %}" ><a class="link" href="/tablePib">Tableau du PIB </a></li>
+                <li id = "bouton" class="{% if name == 'pib' %}active{% endif %}" ><a class="link" href="/table/country_pib">Tableau du PIB</a></li>
             </ul>
         </nav>
     </header>
